--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 require:
   - rubocop-rails
+  - rubocop-graphql
 
 AllCops:
   Exclude:
@@ -13,3 +14,16 @@ AllCops:
 
 Style/Documentation:
   Enabled: false
+
+Metrics/MethodLength:
+  Max: 20
+
+GraphQL/ObjectDescription:
+  Enabled: true
+  Exclude:
+    - '**/*_schema.rb'
+    - '**/base_*.rb'
+    - '**/graphql/query_context.rb'
+    - 'app/graphql/types/mutation_type.rb'
+    - 'app/graphql/types/node_type.rb'
+    - 'app/graphql/types/query_type.rb'
