Adding myself to auto-merges

--- a/.github/workflows/approve-for-dependabot.yml
+++ b/.github/workflows/approve-for-dependabot.yml
@@ -4,6 +4,20 @@ permissions:
   pull-requests: write
   contents: write
 jobs:
+  me:
+    runs-on: ubuntu-latest
+    if: ${{ github.actor == 'sophiedeziel' }}
+    steps:
+      - name: Approve a PR
+        run: gh pr review --approve "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Enable auto-merge
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   dependabot:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
