--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "7",
     "@babel/preset-react": "^7.22.15",
     "@babel/runtime": "7",
+    "@rails/actiontext": "^7.1.0",
     "babel-loader": "9",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -25,6 +26,7 @@
     "shakapacker": "7.1.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "5",
+    "trix": "^2.0.7",
     "webpack": "5",
     "webpack-assets-manifest": "5",
     "webpack-cli": "5",
