--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "app",
+  "packageManager": "yarn@1.22.22",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.9.11",
@@ -23,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-on-rails": "14.0.5",
     "react-router-dom": "^6.22.3",
-    "shakapacker": "7.2.3",
+    "shakapacker": "8.0.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "5",
     "trix": "^2.1.4",
