--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: yarn
-          node-version: 23.3.0
+          node-version-file: .tool-versions
 
       - name: 'Yarn Install'
         run: yarn install
@@ -91,7 +91,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: yarn
-          node-version: 23.3.0
+          node-version-file: .tool-versions
 
       - name: 'Yarn Install'
         run: yarn install
@@ -128,7 +128,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           cache: yarn
-          node-version: 23.3.0
+          node-version-file: .tool-versions
 
       - name: 'Yarn Install'
         run: yarn install
