--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,7 +186,11 @@ jobs:
 
       - name: Setup test database
         run: |
+          # Clean up any existing parallel databases first
+          RAILS_ENV=test bin/rails parallel:drop || true
+          # Set up main test database
           RAILS_ENV=test bin/rails db:drop db:create db:schema:load || RAILS_ENV=test bin/rails db:prepare
+          # Set up parallel test databases
           RAILS_ENV=test bin/rails parallel:setup
 
       - name: Precompile assets for testing
